# privacy-hackathon-analysis

./: .gitignore  .mcp.json  CLAUDE.md  COMPETITIVE_ANALYSIS_DETAILED.md  COMPETITIVE_STRATEGY.md  README.md  TECHNICAL_DUE_DILIGENCE_FRESH.md  ZORB_HACKATHON_SUBMISSION_PLAN.md  repo-index.json
.claude/: ralph-loop.local.md
AURORAZK_SUBMISSION/: .cursorrules  .env.example  .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE  NOIR_INTEGRATION.md  README.md  package.json  tsconfig.json
AgenC_Moltbook_Agent/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  agent.py  docker-compose.yml  requirements.txt
Arcshield/: .gitignore  Anchor.toml  Arcium.toml  GITHUB_SETUP.md  PUSH_TO_GITHUB.md  QUICK_START.md  README.md  ROADMAP.md  RUN_ME_FIRST.txt  SETUP.md  SETUP_COMPLETE.md  START_HERE.md  package-lock.json  package.json  restart-dev-server.bat  restart-dev-server.ps1  start-frontend.bat  start-frontend.ps1  tsconfig.json
Arcshield/programs/arcshield/: Cargo.toml
Arcshield/programs/arcshield/src/: lib.rs
Auction-App-Data-Processing_AWS-Pipeline/: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
Auction-App-Data-Processing_AWS-Pipeline/config/: spark-defaults.conf
Auction-App-Data-Processing_AWS-Pipeline/dags/: __init__.py  batch_processing_dag.py
Auction-App-Data-Processing_AWS-Pipeline/docs/: ARCHITECTURE.md
Auction-App-Data-Processing_AWS-Pipeline/docs/adr/: 001-kafka-over-kinesis.md  002-spark-over-flink.md
Auction-App-Data-Processing_AWS-Pipeline/scripts/: init-localstack.sh
Auction-App-Data-Processing_AWS-Pipeline/sql/: gold_schema.sql  init.sql  silver_schema.sql
Auction-App-Data-Processing_AWS-Pipeline/src/: __init__.py
Auction-App-Data-Processing_AWS-Pipeline/src/data_generator/: __init__.py  batch_generator.py  generator.py  kafka_producer.py  schemas.py  seed_database.py
Auction-App-Data-Processing_AWS-Pipeline/src/ingestion/: __init__.py  kafka_consumer.py  s3_ingestion.py
Auction-App-Data-Processing_AWS-Pipeline/src/serving/: __init__.py  duckdb_analytics.py  postgres_loader.py
Auction-App-Data-Processing_AWS-Pipeline/src/transformation/: __init__.py  batch_processing.py  spark_streaming.py
Auction-App-Data-Processing_AWS-Pipeline/terraform/: main.tf  outputs.tf  variables.tf
Auction-App-Data-Processing_AWS-Pipeline/terraform/modules/iam/: main.tf
Auction-App-Data-Processing_AWS-Pipeline/terraform/modules/rds/: main.tf
Auction-App-Data-Processing_AWS-Pipeline/terraform/modules/s3/: main.tf
Auction-App-Data-Processing_AWS-Pipeline/tests/: __init__.py  conftest.py  test_generator.py  test_transformations.py
Auction-App-Data-Processing_AWS-Pipeline/tests/integration/: __init__.py  test_pipeline.py
Dark-Null-Protocol/: Auditreport.md
anon0mesh/escrow/programs/escrow/: Cargo.toml
anon0mesh/escrow/programs/escrow/src/: lib.rs
deploy-shield/: .gitignore  Cargo.toml  README.md
deploy-shield/docs/: test-validation.md
deploy-shield/src/: config.rs  main.rs  privacy.rs  utils.rs
deploy-shield/src/commands/: deploy.rs  finalize.rs  fund.rs  init.rs  mod.rs  rotate.rs  status.rs  transfer_authority.rs  upgrade.rs
incognito-protocol/contracts/escrow/programs/escrow/: Cargo.toml
incognito-protocol/contracts/escrow/programs/escrow/src/: lib.rs  lib.rs.bak2
privacy-execution-layer/programs/private-pool/: Cargo.toml
privacy-execution-layer/programs/private-pool/src/: lib.rs
privacy-execution-layer/relayer/: Cargo.toml
privacy-execution-layer/relayer/src/: lib.rs  registry.rs  server.rs
privacylens/analyzer/: Cargo.toml
privacylens/analyzer/src/: analyzer.rs  lib.rs  parser.rs  scorer.rs  types.rs  wasm.rs
privacylens/analyzer/src/detectors/: access_detector.rs  crypto_detector.rs  mod.rs  pii_detector.rs  side_channel_detector.rs  state_detector.rs  timing_detector.rs
privacylens/analyzer/src/patterns/: mod.rs  privacy_patterns.rs
privacylens/cli/: Cargo.toml
privacylens/cli/src/: config.rs  main.rs  output.rs
privacylens/cli/src/commands/: analyze.rs  compare.rs  init.rs  login.rs  mod.rs  report.rs  score.rs  watch.rs
shadow-fence/: Anchor.toml  Cargo.toml  README.md  SOLANA_HACKATHON_SUBMISSION.md  package-lock.json  package.json  tsconfig.json
shadow-fence/circuits/: Nargo.toml  Prover.toml  fence.circom  fence.sym  fence_0000.zkey  fence_final.zkey  pot12_0001.ptau  verification_key.json
shadow-fence/circuits/fence_js/: fence.wasm
shadow-fence/circuits/src/: main.nr
shadow-fence/docs/: DOCUMENTATION_INDEX.txt  HACKATHON_SUBMISSION_CHECKLIST.md  SHADOW_FENCE_COMPLETE_DOCUMENTATION.md  SHADOW_FENCE_COMPLETE_DOCUMENTATION.odt
shadow-fence/libs/wit-bindgen/: Cargo.toml
shadow-fence/programs/shadow-fence/: Cargo.toml
shadow-fence/programs/shadow-fence/src/: lib.rs
shadow-fence/scripts/: deploy-devnet.sh  deploy-vps.sh  update-program-id.sh
shadow-fence/tests/: shadow-fence.ts
shadow-fence/web/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
shadow-fence/web/components/: DonationBox.tsx  Header.tsx  ProofGenerator.tsx  ReputationDashboard.tsx  UseCases.tsx  WalletProvider.tsx
shadow-fence/web/pages/: _app.tsx  _document.tsx  index.tsx
shadow-fence/web/pages/api/: generate-proof.ts
shadow-fence/web/styles/: globals.css
shielded-pool-pinocchio-solana/shielded_pool_program/: Cargo.toml
shielded-pool-pinocchio-solana/shielded_pool_program/src/: lib.rs  state.rs
shielded-pool-pinocchio-solana/shielded_pool_program/src/instructions/: deposit.rs  initialize.rs  mod.rs  withdraw.rs
yieldcash-solana-privacy/client-rs/: Cargo.toml
yieldcash-solana-privacy/client-rs/src/: crypto.rs  encryption.rs  lib.rs  merkle.rs  note.rs  proof_gen.rs  solana.rs  types.rs
yieldcash-solana-privacy/client-rs/tests/: devnet_e2e_test.rs  e2e_sdk_test.rs
zorb-submission/public-repo/programs/shielded-pool/cli/: Cargo.toml
zorb-submission/public-repo/programs/shielded-pool/cli/src/: main.rs
(+1795 files in other folders)
