[package]
name = "shield-deploy"
version = "0.2.1"
edition = "2021"
rust-version = "1.88"
authors = ["Emengkeng Juslen <emkjuslen@gmail.com>"]
description = "Privacy-preserving Solana program deployment using ZK Compression"
license = "MIT"

[[bin]]
name = "shield-deploy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
bs58 = "0.5"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12"
# privacy-cash = { path = "/home/jussec/privacy-cash-rust-sdk" }
privacy-cash = { git = "https://github.com/Emengkeng/privacy-cash-rust-sdk", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

constant_time_eq = "=0.3.1"

# Use exact 2.0.0 version for all Solana dependencies
solana-cli-config = "2"
solana-client = "2"
solana-pubkey = "2"
solana-program = "2"
solana-sdk = { version = "2", features = ["full"] }
solana-system-interface = { version = "2", features = ["bincode"] }
solana-commitment-config = "2"
solana-loader-v3-interface = { version = "2", features = ["bincode"] }
solana-sdk-ids = "2"

toml = "0.8"
tokio = { version = "1.36", features = ["full"] }
solana-address = "2.0.0"

[dev-dependencies]
tempfile = "3.24"

[profile.release]
opt-level = 3
