[package]
name = "privacylens-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["PrivacyLens Team"]
description = "Privacy analysis engine for Solana programs"
license = "MIT"
repository = "https://github.com/privacylens/privacylens"
keywords = ["solana", "privacy", "security", "analysis", "blockchain"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
wasm = ["wasm-bindgen", "console_error_panic_hook", "wee_alloc"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

# Binary parsing
goblin = "0.8"
byteorder = "1.5"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Regex for pattern matching
regex = "1.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"

# Async (for native)
tokio = { version = "1.35", features = ["full"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]
