[package]
name = "privacylens-cli"
version = "0.1.0"
edition = "2021"
authors = ["PrivacyLens Team"]
description = "Command-line tool for PrivacyLens privacy analysis"
license = "MIT"
repository = "https://github.com/privacylens/privacylens"
keywords = ["solana", "privacy", "security", "cli", "blockchain"]

[[bin]]
name = "privacylens"
path = "src/main.rs"

[dependencies]
# Core analyzer
privacylens-analyzer = { path = "../analyzer" }

# CLI framework
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Output formatting
colored = "2.1"
indicatif = "0.17"
console = "0.15"
tabled = "0.15"

# Configuration
toml = "0.8"
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Solana
solana-client = "1.17"
solana-sdk = "1.17"

# Utilities
base64 = "0.21"
hex = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.9"
