[package]
name = "yieldcash-client"
version = "0.1.0"
edition = "2021"
description = "YieldCash privacy pool client with Noir-compatible cryptography"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Noir's blackbox solver for BN254 - contains Poseidon2 implementation
acvm_blackbox_solver = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.3", package = "acvm_blackbox_solver" }
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.3", package = "bn254_blackbox_solver" }
acir = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.3" }

# Field arithmetic
ark-ff = "0.5"
ark-bn254 = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Randomness
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

# Error handling
thiserror = "1.0"

# Hex encoding
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
solana-sdk = "2.0"
solana-client = "2.0"
solana-program = "2.0"
borsh = "1.5"

[[bin]]
name = "compute_zeros"
path = "src/bin/compute_zeros.rs"

[features]
default = []
wasm = ["getrandom/js"]
