[package]
name = "arcshield"
version = "0.1.0"
description = "Private DeFi DApp using Arcium"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arcshield"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
solana-program = "~1.18.0"
