[package]
name = "private-pool"
version = "0.1.0"
description = "Privacy Execution Layer v3.0 - ZK-SNARK privacy mixer on Solana"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17"

[dev-dependencies]
