[package]
name = "shadow-fence"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shadow_fence"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

# We use the older ZK libs which are compatible with the patched deps
ark-bn254 = "0.3.0"
ark-groth16 = "0.3.0"
ark-serialize = "0.3.0"
ark-ff = "0.3.0"
ark-ec = "0.3.0"
