[package]
name = "shielded-pool-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for interacting with the shielded pool program"

# Standalone workspace to avoid dependency conflicts with parent
[workspace]

[[bin]]
name = "shielded-pool"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Solana 1.18 (most stable and widely compatible)
solana-client = "1.18"
solana-sdk = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.3"

# Serialization
borsh = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
